# gecko-stx

./: Dockerfile  LICENSE  README.md  settings.json
Gecko/: Devid.py  __init__.py  instructions.md
Hypothesis/: counter_property_test.py
SmartContractTestingAgency/: __init__.py  agency.py  agency_manifesto.md
SmartContractTestingAgency/DeveloperAgent/: DeveloperAgent.py  __init__.py  instructions.md
SmartContractTestingAgency/DeveloperAgent/tools/: ClaritySdkTool.py  TypeScriptTool.py
SmartContractTestingAgency/PlannerAgent/: PlannerAgent.py  instructions.md
SmartContractTestingAgency/SmartContractCEO/: SmartContractCEO.py  __init__.py  instructions.md
fuzz/: stx_fuzz.rs
fuzz/contracts/: counter.clar
fuzz/counter/: counter.test.ts
parser/bindings/: __init__.py  binding.c  clarity.h
parser/bindings/test/: statements.txt  types.txt
parser/queries/: highlights.scm
parser/src/: grammar.json  node-type.json  parser.c
static/: Cargo.toml  annotation.rs
static/backend/: wrapper.py
static/detectors/: AssertBlock.rs  CallInsideAsContract.rs  DivideBeforeMultiply.rs  PrivateFunctionNotUsed.rs  TxSenderInAssert.rs  UnwrapPanicUsage.rs
static/examples/: Clarinet.toml  package.json
static/examples/contracts/: vulnbank.clar
static/src/: main.rs
static/static/: Cargo.toml  annotation.rs  ast_dependency_detector.rs
static/static/src/: main.rs
ui/: package-lock.json
ui/app/: layout.js
ui/app/dashboard/: layout.jsx  page.jsx
ui/app/dashboard/scan/: page.jsx
ui/app/dashboard/scan/[id]/: page.jsx
ui/app/dashboard/scan/add/: page.jsx
ui/app/ui/: globals.css
ui/app/ui/dashboard/: dashboard.module.css
ui/app/ui/dashboard/card/: card.jsx  card.module.css
ui/app/ui/dashboard/footer/: footer.jsx  footer.module.css
ui/app/ui/dashboard/navbar/: navbar.jsx  navbar.module.css
ui/app/ui/dashboard/rightbar/: rightbar.jsx  rightbar.module.css
(+9 files in other folders)
