[package]
name = "geckostatic"
version = "0.1.0"
edition = "2021"
description = "gecko for consensus 2024"
author = "JJ"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.31"
lazy_static = "1.4.0"
regex = "1.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.47", features = ["unbounded_depth"] }
sha2 = "0.10"
serde_derive = "1.0"
integer-sqrt = "0.1.3"
getrandom = { version = "0.2.3", features = ["js"] }
atty = "0.2.14"
clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", package = "clarity", default-features = false }
clar2wasm = { git = "https://github.com/stacks-network/clarity-wasm.git", optional = true }
pox-locking = { git = "https://github.com/stacks-network/stacks-core.git", branch="feat/clarity-wasm-develop", optional = true, default-features = false }


tokio = { version = "1.35.1", features = ["full"], optional = true }
tokio-util = { version = "0.7.10", features = ["codec"], optional = true }
futures = { version = "0.3.12", optional = true }
debug_types = { version = "1.0.0", optional = true }
httparse = { version = "1.6.0", optional = true }
bytes = { version = "1.1.0", optional = true }
log = { version = "0.4.16", optional = true }
memchr = { version = "2.4.1", optional = true }


pico-args = { version = "0.5.0", optional = true }
rustyline = { version = "14.0.0", optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
hiro_system_kit = { version = "0.1.0", package = "hiro-system-kit", path = "../hiro-system-kit", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }